--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -3,7 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="84dp"
+    android:background="@drawable/border"
+    android:paddingBottom="15dp"
+    android:paddingTop="3dp"
     >
 
     <TextView
@@ -11,8 +14,9 @@
         android:layout_height="match_parent"
         android:gravity="center_vertical"
         android:text="Sample text"
-        android:textSize="32sp"
+        android:textSize="28sp"
         android:id="@+id/list_item_title"
+        android:layout_margin="10dp"
         />
 
     <TextView
@@ -22,5 +26,6 @@
         android:text="sample date"
         android:textSize="16sp"
         android:id="@+id/list_item_date"
+        android:layout_marginRight="10dp"
         ></TextView>
 </FrameLayout>
